--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ authors = ["Ralf Jung <post@ralfj.de>"]
 [dependencies]
 rocket = "0.3.10"
 rocket_codegen = "0.3.10"
+
+[dependencies.rocket_contrib]
+version = "*"
+default-features = false
+features = ["handlebars_templates"]
