--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,8 @@ authors = ["Ralf Jung <post@ralfj.de>"]
 [dependencies]
 rocket = "0.3.10"
 rocket_codegen = "0.3.10"
+rocket_contrib = { version = "*", default-features = false, features = ["handlebars_templates"] }
 diesel = { version = "1.2.2", features = ["postgres"] }
 r2d2 = "0.8.2"
 r2d2-diesel = "1.0.0"
-
-[dependencies.rocket_contrib]
-version = "*"
-default-features = false
-features = ["handlebars_templates"]
+dotenv = "0.11.0"
