--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ rocket = "0.3.10"
 rocket_codegen = "0.3.10"
 rocket_contrib = { version = "*", default-features = false, features = ["handlebars_templates"] }
 diesel = { version = "1.2.2", features = ["postgres"] }
+diesel_migrations = "1.2.0"
 r2d2 = "0.8.2"
 r2d2-diesel = "1.0.0"
 dotenv = "0.11.0"
