--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ diesel_migrations = "1.2.0"
 r2d2 = "0.8.2"
 r2d2-diesel = "1.0.0"
 dotenv = "0.11.0"
+ring = "0.11.0"
+serde = "1.0"
+serde_derive = "1.0"
+rmp-serde = "0.13.7"
