--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Ralf Jung <post@ralfj.de>"]
 [dependencies]
 rocket = "0.3.10"
 rocket_codegen = "0.3.10"
-rocket_contrib = { version = "*", default-features = false, features = ["handlebars_templates"] }
+rocket_contrib = { version = "*", features = ["handlebars_templates"] }
 diesel = { version = "1.2.2", features = ["postgres"] }
 diesel_migrations = "1.2.0"
 r2d2 = "0.8.2"
@@ -18,6 +18,7 @@ serde_json = "1.0"
 rmp-serde = "0.13.7"
 failure = "0.1.1"
 url = "1.7.0"
+url_serde = "0.2.0"
 toml = "0.4.6"
 lettre = "0.8"
 lettre_email = "0.8"
