sign action and put signed action, encoded, into the email

--- a/Rocket.toml.dist
+++ b/Rocket.toml.dist
@@ -3,3 +3,4 @@ instance_name = "Freifunk ????"
 root_url = "https://????/"
 email_from = "noreply@???"
 postgres_url = "postgres://..."
+action_signing_key = "0123456789abcdef"
