--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ lettre = "0.8"
 lettre_email = "0.8"
 base64 = "0.9.1"
 hex = "0.3.2"
+reqwest = "0.8.5"
+chrono = { version = "0.4.2", features = ["serde"] }
