--- a/Rocket.toml.dist
+++ b/Rocket.toml.dist
@@ -1,12 +1,28 @@
 [global.ff-node-monitor.ui]
+# The name of your Freifunk community.
 instance_name = "Freifunk ..."
+# The sender address of the emails that are sent by ff-node-monitor.  Make sure
+# you have a mail service running locally that is set up to deliver emails from
+# that address.
 email_from = "...@...freifunk.net"
 
 [global.ff-node-monitor.urls]
+# The root URL where you will be hosting ff-node-monitor.
 root_url = "https://..."
+# The URL to the hopglass nodes.json file.
 nodes_url = "https://.../nodes.json"
 
 [global.ff-node-monitor.secrets]
-postgres_url = "postgres://..."
-# generate the key with `openssl rand -hex 32`
+# PostgreSQL credentials.  If you followed the instructions in the README, this
+# should be correct.
+postgres_url = "postgres://ff-node-monitor@/ff-node-monitor"
+# Key used to sign data for confirmation emails.  Generate this key with
+# `openssl rand -hex 32`.
 action_signing_key = "..."
+
+[global]
+# The address and port on which ff-node-monitor will listen.
+address = "127.0.0.1"
+port = 8833
+# Secret key used by Rocket.  Generate this key with `openssl rand -base64 32`.
+secret_key = "..."
