--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ authors = ["Ralf Jung <post@ralfj.de>"]
 
 [dependencies]
 rocket = "0.3.10"
-rocket_codegen = "0.3.10"
+rocket_codegen = "*"
 rocket_contrib = { version = "*", features = ["handlebars_templates"] }
 diesel = { version = "=1.2.2", features = ["postgres"] }
-diesel_migrations = "1.2.0"
+diesel_migrations = "*"
 r2d2 = "0.8.2"
 r2d2-diesel = "1.0.0"
 ring = "0.11.0"
