--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Ralf Jung <post@ralfj.de>"]
 rocket = "0.3.10"
 rocket_codegen = "*"
 rocket_contrib = { version = "*", features = ["handlebars_templates"] }
-diesel = { version = "=1.2.2", features = ["postgres"] }
+diesel = { version = "1.3.0", features = ["postgres"] }
 diesel_migrations = "*"
 r2d2 = "0.8.2"
 r2d2-diesel = "1.0.0"
