--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,5 @@ notifications:
     on_success: never
 
 script:
-- env | grep TRAVIS_
-- if [ "$TRAVIS_EVENT_TYPE" != CRON ]; then rustup default $(cat rust-version); fi
+- if [ "$TRAVIS_EVENT_TYPE" != cron ]; then rustup default $(cat rust-version); fi
 - cargo build --locked
