--- a/Rocket.toml.dist
+++ b/Rocket.toml.dist
@@ -11,6 +11,9 @@ email_from = "...@...freifunk.net"
 root = "https://host/node-monitor"
 # The URL to the hopglass nodes.json file.
 nodes = "https://host/path/nodes.json"
+# URL to the source code (needed for AGPL compliance).  You can leave this unchanged if you didn't
+# change the code.  Otherwise, you have to upload the changed code somewhere and point to it here.
+sources = "https://github.com/freifunk-saar/ff-node-monitor"
 
 [global.ff-node-monitor.secrets]
 # PostgreSQL credentials.  If you followed the instructions in the README, this
