--- a/Rocket.toml.dist
+++ b/Rocket.toml.dist
@@ -12,6 +12,8 @@ nodes = "https://host/path/nodes.json"
 # URL to the source code (needed for AGPL compliance).  You can leave this unchanged if you didn't
 # change the code.  Otherwise, you have to upload the changed code somewhere and point to it here.
 sources = "https://github.com/freifunk-saar/ff-node-monitor"
+# Optional: Absolute URL to another sytelsheet that is included in the page.
+#stylesheet = "https://..."
 
 [global.ff-node-monitor.secrets]
 # PostgreSQL credentials.  If you followed the instructions in the README, this
