make 'Knotenüberwachung' configurable

--- a/Rocket.toml.dist
+++ b/Rocket.toml.dist
@@ -1,6 +1,9 @@
 [global.ff-node-monitor.ui]
-# The name of your Freifunk community.
-instance_name = "Freifunk ..."
+# The name and grammatical article of this instance.
+instance_name = "Freifunk ... Knotenüberwachung"
+# The sentence "Willkommen bei $instance_article_dative $instance_name" should be grammatically
+# correct.
+instance_article_dative = "der"
 # The sender address of the emails that are sent by ff-node-monitor.
 email_from = "...@...freifunk.net"
 
