--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -8,8 +8,11 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "debian/stretch64"
 
-  config.vm.provider "virtualbox" do |vb|
-    vb.customize ["modifyvm", :id, "--memory", "512"]
+  config.vm.provider "virtualbox" do |v|
+    v.memory = 1024
+  end
+  config.vm.provider :libvirt do |v|
+    v.memory = 1024
   end
 
   config.vm.define "ff-service" do |t|
