--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -10,9 +10,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.provider "virtualbox" do |v|
     v.memory = 1024
+    v.cpus = 2
   end
   config.vm.provider :libvirt do |v|
     v.memory = 1024
+    v.cpus = 2
   end
 
   config.vm.define "ff-service" do |t|
