--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "ff-node-monitor"
 version = "0.1.0"
 authors = ["Ralf Jung <post@ralfj.de>"]
+edition = "2018"
 
 [dependencies]
 rocket = "0.3.10"
