--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,13 @@ authors = ["Ralf Jung <post@ralfj.de>"]
 edition = "2018"
 
 [dependencies]
-rocket = "0.3.10"
-rocket_codegen = "*"
-rocket_contrib = { version = "*", features = ["handlebars_templates"] }
-diesel = { version = "1.3.0", features = ["postgres"] }
-diesel_migrations = "*"
+rocket = "0.4"
+rocket_contrib = { version = "0.4", features = ["handlebars_templates"] }
+diesel = { version = "1.3", features = ["postgres"] }
+diesel_migrations = "1.3"
 r2d2 = "0.8.2"
 r2d2-diesel = "1.0.0"
-ring = "0.11.0"
+ring = "0.13"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
