--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,9 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4"
-rocket_contrib = { version = "0.4", features = ["handlebars_templates"] }
+rocket_contrib = { version = "0.4", features = ["handlebars_templates", "diesel_postgres_pool"] }
 diesel = { version = "1.3", features = ["postgres"] }
 diesel_migrations = "1.3"
-r2d2 = "0.8.2"
-r2d2-diesel = "1.0.0"
 ring = "0.13"
 serde = "1.0"
 serde_derive = "1.0"
