--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,7 @@ rocket_contrib = { version = "0.4", features = ["handlebars_templates", "diesel_
 diesel = { version = "1.3", features = ["postgres"] }
 diesel_migrations = "1.3"
 ring = "0.13"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rmp-serde = "0.13.7"
 failure = "0.1.1"
