--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Ralf Jung <post@ralfj.de>"]
 edition = "2018"
 
+[profile.release]
+overflow-checks = true
+
 [dependencies]
 rocket = "0.4"
 rocket_contrib = { version = "0.4", features = ["handlebars_templates", "diesel_postgres_pool"] }
