--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ diesel_migrations = "1.3"
 ring = "0.13"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_repr = "0.1"
 rmp-serde = "0.13.7"
 failure = "0.1.1"
 url = "1.7.0"
