--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ rocket = "0.4"
 rocket_contrib = { version = "0.4", features = ["handlebars_templates", "diesel_postgres_pool"] }
 diesel = { version = "1.3", features = ["postgres"] }
 diesel_migrations = "1.3"
-ring = "0.13"
+ring = "0.13" # tied to 0,13 due to Rocket
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_repr = "0.1"
@@ -25,12 +25,6 @@ base64 = "0.10"
 hex = "0.3.2"
 reqwest = "0.9"
 chrono = { version = "0.4.2", features = ["serde"] }
-
-[dependencies.lettre]
-git = "https://github.com/lettre/lettre"
-rev = "644b1e59b06704822c6a540c12ed44b6e827d221"
-features = ["smtp-transport"]
-
-[dependencies.lettre_email]
-git = "https://github.com/lettre/lettre"
-rev = "644b1e59b06704822c6a540c12ed44b6e827d221"
+mail = { version = "0.6.7", features = ["smtp"] }
+lazy_static = "1.2.0"
+futures = "0.1"
