--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ reqwest = "0.9"
 chrono = { version = "0.4.2", features = ["serde"] }
 mail = { version = "0.6.7", features = ["smtp"] }
 futures = "0.1"
+uuid = "0.7.3"
