--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_repr = "0.1"
 rmp-serde = "0.13.7"
-failure = "0.1.1"
+anyhow = "1.0.31"
+thiserror = "1.0"
 url = "1.7.0"
 url_serde = "0.2.0"
 toml = "0.4.6"
