Don't send warnings if ALL nodes are offline
Signed-off-by: Ruben Barkow-Kuder <github@r.z11.de>

--- a/Rocket.toml.dist
+++ b/Rocket.toml.dist
@@ -6,6 +6,9 @@ instance_name = "Freifunk ... Knotenüberwachung"
 instance_article_dative = "der"
 # The sender address of the emails that are sent by ff-node-monitor.
 email_from = "...@...freifunk.net"
+# When fewer nodes than this are online in the nodes.json file, the database won't be updated
+# and there will be no warning mails sent. A value of 0 disables this sanity check.
+min_online_nodes_on_map = 0
 
 [global.ff-node-monitor.urls]
 # The root URL where you will be hosting ff-node-monitor (with trailing slash)
