--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
             RUST_TOOLCHAIN=$(cat rust-version)
           fi
           echo "Installing Rust version: $RUST_TOOLCHAIN"
-          rustup default $RUST_TOOLCHAIN
+          rustup override set $RUST_TOOLCHAIN
 
       - name: Show Rust version
         run: |
