--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,16 +16,15 @@ ring = "0.13" # tied to 0,13 due to Rocket
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_repr = "0.1"
-rmp-serde = "0.13.7"
+rmp-serde = "1"
 anyhow = "1.0.31"
 thiserror = "1.0"
-url = "1.7.0"
-url_serde = "0.2.0"
+url = { version = "2.2", features = ["serde"] }
 toml = "0.4.6"
-base64 = "0.10"
-hex = "0.3.2"
-reqwest = "0.9"
+base64 = "0.13"
+hex = "0.4.3"
+reqwest = { version = "0.11", features = ["blocking"] }
 chrono = { version = "0.4.2", features = ["serde"] }
 mail = { version = "0.7", features = ["smtp"] }
 futures = "0.1"
-uuid = "0.7.3"
+uuid = { version = "1.0", features = ["v4"] }
