--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,11 @@ rmp-serde = "1"
 anyhow = "1.0.31"
 thiserror = "1.0"
 url = { version = "2.2", features = ["serde"] }
-toml = "0.4.6"
+toml = "0.4.6" # cannot use 0.5 due to Rocket
 base64 = "0.13"
 hex = "0.4.3"
 reqwest = { version = "0.11", features = ["blocking"] }
 chrono = { version = "0.4.2", features = ["serde"] }
 mail = { version = "0.7", features = ["smtp"] }
-futures = "0.1"
+futures = "0.1" # cannot use newer version due to mail
 uuid = { version = "1.0", features = ["v4"] }
