--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,13 @@ edition = "2018"
 overflow-checks = true
 
 [dependencies]
-rocket = "0.4.1"
-rocket_contrib = { version = "0.4", features = ["handlebars_templates", "diesel_postgres_pool"] }
-diesel = { version = "1.3", features = ["postgres"] }
-diesel_migrations = "1.3"
+rocket = "0.5"
+rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
+rocket_db_pools = { version = "0.1.0", features = ["diesel_postgres"] }
+scoped-futures = "0.1.3"
+diesel = { version = "2.0", features = ["postgres"] }
+diesel_migrations = "2.0"
+diesel-async = { version = "0.4.1", features = ["async-connection-wrapper"] }
 ring = "0.13" # tied to 0,13 due to Rocket
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -20,7 +23,6 @@ rmp-serde = "1"
 anyhow = "1.0.31"
 thiserror = "1.0"
 url = { version = "2.2", features = ["serde"] }
-toml = "0.4.6" # cannot use 0.5 due to Rocket
 base64 = "0.13"
 hex = "0.4.3"
 reqwest = { version = "0.11", features = ["blocking"] }
