--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,9 @@ overflow-checks = true
 [dependencies]
 rocket = "0.5"
 rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
-rocket_db_pools = { version = "0.1.0", features = ["diesel_postgres"] }
-scoped-futures = "0.1.3"
+rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
 diesel = { version = "2.0", features = ["postgres"] }
 diesel_migrations = "2.0"
-diesel-async = { version = "0.4.1", features = ["async-connection-wrapper"] }
 ring = "0.13" # tied to 0,13 due to Rocket
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -25,7 +23,7 @@ thiserror = "1.0"
 url = { version = "2.2", features = ["serde"] }
 base64 = "0.13"
 hex = "0.4.3"
-reqwest = { version = "0.11", features = ["blocking"] }
+reqwest = { version = "0.11", features = ["json"] }
 chrono = { version = "0.4.2", features = ["serde"] }
 mail = { version = "0.7", features = ["smtp"] }
 futures = "0.1" # cannot use newer version due to mail
