--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
 rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
 diesel = { version = "2.0", features = ["postgres"] }
 diesel_migrations = "2.0"
-ring = "0.13" # tied to 0.13 due to Rocket
+ring = "0.17"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_repr = "0.1"
