--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,4 @@ base64 = "0.21"
 hex = "0.4.3"
 reqwest = { version = "0.11", features = ["json"] }
 chrono = { version = "0.4.2", features = ["serde"] }
-mail = { version = "0.7", features = ["smtp"] }
-futures = { version = "0.3",  features = ["compat"] }
-uuid = { version = "1.0", features = ["v4"] }
+lettre = { version = "0.11.2", features = ["serde", "tokio1", "tokio1-native-tls"] }
